GP-5581: Allow optimization by truncation of subpieced unique varnodes.